# mai_os_3s

./: .gitignore  readme.md
course_project/: im_client.cpp  im_server.cpp  report.tex
course_project/code/: CMakeLists.txt  im_client.cpp  im_server.cpp
course_project/src/: benchmark.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab1/code/: CMakeLists.txt  child.cpp  parent.cpp
lab1/logs/: log.txt
lab1/src/: literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab2/: CMakeLists.txt  report.tex
lab2/code/: CMakeLists.txt
lab2/code/src/: det.cpp  det.hpp  det_parallel.cpp  main_parallel.cpp  main_serial.cpp
lab2/code/tests/: benchmark.cpp
lab2/logs/: log.txt
lab2/src/: benchmark.tex  literature.tex  parallel.cpp  problem.tex  serial.cpp  src.tex  thinks.tex  titlepage.tex
lab2/styles/: log-style.sty
lab2/tests/: benchmark.cpp
lab3/code/: child.cpp  parent.cpp
lab3/logs/: nums
lab3/src/: benchmark.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab4/code/: CMakeLists.txt
lab4/code/include/: contracts.h
lab4/code/src/: impl1.cpp  impl2.cpp  program1.cpp  program2.cpp
lab4/logs/: log.txt  log1.txt  log2.txt
lab4/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab5/: report.tex
lab5/logs/: log1.txt  log2.txt  log3.txt  log4.txt  log5.txt
lab5/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
